# estate_agency

./: .env.example  .gitignore  AWS_INTEGRATION_GUIDE.md  BILINGUAL_GUIDE.md  CHECKLIST.md  COMPANY_MODEL_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_QUICK.md  RAILWAY_DEPLOYMENT.md  RAILWAY_SHELL_COMMANDS.md  README.md  TEMPLATE_DOCUMENTATION.md  agency.code-workspace  db.sqlite3  generate_secret_key.py  main.py  pyproject.toml  railway.toml  s3-bucket-policy.json
core/: settings.py  storage_backends.py  urls.py
locale/zh/LC_MESSAGES/: django.mo  django.po
locale/zh_Hant/LC_MESSAGES/: django.mo  django.po
media/properties/: фото_кварттиры.jfif
properties/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
properties/migrations/: 0001_initial.py  0002_property_listing_type.py  0003_property_latitude_property_longitude.py  0004_company.py  0005_agent_is_authorized.py
properties/templatetags/: property_filters.py
templates/: base.html  contacts.html  home.html  property_detail.html
templates/includes/: _footer.html  _header.html
templates/properties/: about.html  agent.html  agent_dashboard.html  agent_list.html  agent_login.html  agent_profile.html  agent_register.html  agent_unauthorized.html  contacts.html  home.html  property_confirm_delete.html  property_detail.html  property_form.html  property_list.html
